--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="header__bottom">
         <div class="header__colum">
-          <span class="header__text">Manage</span>
+          <span class="header__text">Manage1</span>
         </div>
         <div class="header__colum">
           <span class="header__text">Friends <span class="header__number">1</span></span>
