--- a/chats.html
+++ b/chats.html
@@ -54,7 +54,7 @@
         </li>
         <li class="chats__chat">
           <div class="chat__content">
-            <img src="images/pro1.jpg">
+            <img src="images/pro1.JPG">
             <div class="chat__preview">
               <h3 class="chat__user">KaKaoTalk</h3>
               <span class="chat__last-message">You logged in into KaKaoTalk PC</span>
