git chase uppercase and lowercase!! at html file

--- a/chats.html
+++ b/chats.html
@@ -42,7 +42,7 @@
       <ul class="chats__list">
         <li class="chats__chat">
           <div class="chat__content">
-            <img src="images/pro1.jpg">
+            <img src="images/pro1.JPG">
             <div class="chat__preview">
               <h3 class="chat__user">Geonil</h3>
               <span class="chat__last-message">만나서 반가워 나는 장건일이라고해</span>
