--- a/chats.html
+++ b/chats.html
@@ -42,7 +42,7 @@
       <ul class="chats__list">
         <li class="chats__chat">
           <div class="chat__content">
-            <img src="images/pro1.JPG">
+            <img src="images/pro1.JPG" width="30px">
             <div class="chat__preview">
               <h3 class="chat__user">Geonil</h3>
               <span class="chat__last-message">만나서 반가워 나는 장건일이라고해</span>
@@ -54,14 +54,14 @@
         </li>
         <li class="chats__chat">
           <div class="chat__content">
-            <img src="images/pro1.JPG">
+            <img src="images/pro1.JPG" width="30px">
             <div class="chat__preview">
               <h3 class="chat__user">KaKaoTalk</h3>
               <span class="chat__last-message">You logged in into KaKaoTalk PC</span>
             </div>
           </div>
           <span class="chat__date-time">
-            15:55
+            Jul 29 15:55
           </span>
         </li>
       </ul>
