--- a/more.html
+++ b/more.html
@@ -112,15 +112,15 @@
       </section>
       <section class="more__options">
         <div class="more__option">
-          <img src="" alt="" class="more__options-image">
+          <img src="images/kakao1.png" alt="" class="more__options-image">
           <span class="more__options-title">Kakao Story</span>
         </div>
         <div class="more__option">
-          <img src="" alt="" class="more__options-image">
+          <img src="images/kakao2.png" alt="" class="more__options-image">
           <span class="more__options-title">Path</span>
         </div>
         <div class="more__option">
-          <img src="" alt="" class="more__options-image">
+          <img src="images/kakao3.png" alt="" class="more__options-image">
           <span class="more__options-title">Kakao friends</span>
         </div>
       </section>
