--- a/chat.html
+++ b/chat.html
@@ -34,5 +34,35 @@
         </div>
       </div>
     </header>
+
+    <main class="chat">
+      <div class="data-divider">
+        <span class="data-divider__text">Wednesday, August 15 2018</span>
+      </div>
+
+      <div class="chat__message chat__message--from--me">
+        <span class="chat__message-time">17:55</span>
+        <span class="chat__message-body">Hello! this is a tess message</span>
+      </div>
+      <div class="chat__message chat_message--to--me">
+        <img src="images/pro1.JPG" width="20px" alt="" class="chat__message-avatar">
+        <div class="chat__message-center">
+            <h3 class="chat__message-username">Lynn</h3>
+            <span class="chat__message-body">And this is an answer</span>
+        </div>
+        <span class="chat__message-time">19:55</span>
+      </div>
+    </main>
+
+    <div class="type-message">
+      <i class="fa fa-plus fa-2x"></i>
+      <div class="type-message__input">
+        <input type="text">
+        <i class="fa fa-smile-o"></i>
+        <span class="record-message">
+          <i class="fa fa-microphone"></i>
+        </span>
+      </div>
+    </div>
   </body>
 </html>
