--- a/chats.html
+++ b/chats.html
@@ -41,28 +41,32 @@
       </div>
       <ul class="chats__list">
         <li class="chats__chat">
-          <div class="chat__content">
-            <img src="images/pro1.JPG" width="30px">
-            <div class="chat__preview">
-              <h3 class="chat__user">Geonil</h3>
-              <span class="chat__last-message">만나서 반가워 나는 장건일이라고해</span>
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/pro1.JPG" width="30px">
+              <div class="chat__preview">
+                <h3 class="chat__user">Geonil</h3>
+                <span class="chat__last-message">만나서 반가워 나는 장건일이라고해</span>
+              </div>
             </div>
-          </div>
+          </a>
           <span class="chat__date-time">
             15:55
           </span>
         </li>
         <li class="chats__chat">
-          <div class="chat__content">
-            <img src="images/pro1.JPG" width="30px">
-            <div class="chat__preview">
-              <h3 class="chat__user">KaKaoTalk</h3>
-              <span class="chat__last-message">You logged in into KaKaoTalk PC</span>
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/pro1.JPG" width="30px">
+              <div class="chat__preview">
+                <h3 class="chat__user">KaKaoTalk</h3>
+                <span class="chat__last-message">You logged in into KaKaoTalk PC</span>
+              </div>
             </div>
-          </div>
-          <span class="chat__date-time">
-            Jul 29 15:55
-          </span>
+            <span class="chat__date-time">
+              Jul 29 15:55
+            </span>
+          </a>
         </li>
       </ul>
       <div class="chat-btn">
