--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
           </header>
           <div class="friends__section-rows">
             <div class="friends__section-row">
-              <img src="" alt="">
-              <span class="friends__section-name">Nicolas</span>
+              <a href="profile.html">
+                <img src="images/kakao1.png" alt="">
+                <span class="friends__section-name">Geonil</span>
+              </a>
             </div>
             <div class="friends__section-row">
-              <img src="" alt="">
+              <img src="images/kakao2.png" alt="">
               <span class="friends__section-name">Friends' Names Display</span>
             </div>
           </div>
