--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Friends</title>
   </head>
   <body>
-    <header>
-      <div class="head__top">
-        <div class="header__colum">
+    <header class="top-header">
+      <div class="header__top">
+        <div class="header__column">
           <i class="fa fa-plane"></i>
           <i class="fa fa-wifi"></i>
         </div>
-        <div class="header__colum">18:38</div>
-        <div class="header__colum">
+        <div class="header__column">18:38</div>
+        <div class="header__column">
           <i class="fa fa-moon-o"></i>
           <i class="fa fa-bluetooth-b"></i>
           <span class="header__battery">100%<i class="fa fa-battery-full"></i></span>
         </div>
       </div>
       <div class="header__bottom">
-        <div class="header__colum">
+        <div class="header__column">
           <span class="header__text">Manage</span>
         </div>
-        <div class="header__colum">
+        <div class="header__column">
           <span class="header__text">Friends <span class="header__number">1</span></span>
         </div>
-        <div class="header__colum">
+        <div class="header__column">
           <i class="fa fa-cog fa-lg"></i>
         </div>
       </div>
