--- a/profile.html
+++ b/profile.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Profile</title>
   </head>
   <body>
-    <header>
-      <div class="head__top">
+    <header class="top-header">
+      <div class="header__top">
         <div class="header__colum">
           <i class="fa fa-plane"></i>
           <i class="fa fa-wifi"></i>
