done friends page with css thanks

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <body>
     <header class="top-header">
       <div class="header__top">
-        <div class="header__column">
+        <div class="header__colum">
           <i class="fa fa-plane"></i>
           <i class="fa fa-wifi"></i>
         </div>
-        <div class="header__column">18:37</div>
-        <div class="header__column">
+        <div class="header__colum">18:38</div>
+        <div class="header__colum">
           <i class="fa fa-moon-o"></i>
           <i class="fa fa-bluetooth-b"></i>
           <span class="header__battery">100%<i class="fa fa-battery-full"></i></span>
@@ -45,27 +45,27 @@
             <h6 class="friends__section-title">My Profile</h6>
           </header>
           <div class="friends__section-rows">
-            <div class="friends__section-row">
-              <a href="profile.html">
-                <img src="images/kakao1.png" alt="">
-                <span class="friends__section-name">Geonil</span>
-              </a>
-            </div>
+            <a href="profile.html">
+              <div class="friends__section-row">
+                  <img src="images/kakao1.png" alt="">
+                  <span class="friends__section-name">Geonil</span>
+              </div>
+            </a>
             <div class="friends__section-row">
               <img src="images/kakao2.png" alt="">
               <span class="friends__section-name">Friends' Names Display</span>
             </div>
           </div>
         </section>
-        <section class="friends__section-list">
+        <section class="friends__section">
           <header class="friends__section-header">
             <h6 class="friends__section-title">Friends</h6>
           </header>
           <div class="friends__section-rows">
-            <div class="friends__section-row">
+            <div class="friends__section-row with-tagline">
               <div class="friends__section-column">
-                <img src="" alt="">
-                <span class="friends__section-name">Geonil</span>
+                <img src="images/pro1.JPG" alt="">
+                <span class="friends__section-name">KAKKK</span>
               </div>
               <span class="friends__section-tagline">
                 Life is short. So live your life.
@@ -76,16 +76,20 @@
     </main>
     <nav class="tab-bar">
       <a href="index.html" class="tab-bar__tab tab-bar__tab--selected">
-        <i class="fa fa-user"></i><span class="tab-bar__title">Friends</span>
+        <i class="fa fa-user"></i>
+        <span class="tab-bar__title">Friends</span>
       </a>
       <a href="chats.html" class="tab-bar__tab">
-        <i class="fa fa-comment"></i><span class="tab-bar__title">Chats</span>
+        <i class="fa fa-comment"></i>
+        <span class="tab-bar__title">Chats</span>
       </a>
       <a href="find.html" class="tab-bar__tab">
-        <i class="fa fa-search"></i><span class="tab-bar__title">Find</span>
+        <i class="fa fa-search"></i>
+        <span class="tab-bar__title">Find</span>
       </a>
       <a href="more.html" class="tab-bar__tab">
-        <i class="fa fa-ellipsis-h"></i><span class="tab-bar__title">More</span>
+        <i class="fa fa-ellipsis-h"></i>
+        <span class="tab-bar__title">More</span>
       </a>
     </nav>
   </body>
