--- a/more.html
+++ b/more.html
@@ -24,7 +24,7 @@
       </div>
       <div class="header__bottom">
         <div class="header__colum">
-
+          <span class="header__text"></span>
         </div>
         <div class="header__colum">
           <span class="header__text">More</span>
@@ -141,8 +141,8 @@
       <a href="find.html" class="tab-bar__tab">
         <i class="fa fa-search"></i><span class="tab-bar__title">Find</span>
       </a>
-      <a href="more.html" class="tab-bar__tab">
-        <i class="fa fa-ellipsis-h"></i><span class="tab-bar__title tab-bar__tab--selected">More</span>
+      <a href="more.html" class="tab-bar__tab  tab-bar__tab--selected">
+        <i class="fa fa-ellipsis-h"></i><span class="tab-bar__title">More</span>
       </a>
     </nav>
   </body>
