--- a/find.html
+++ b/find.html
@@ -30,7 +30,7 @@
           <span class="header__text">Find</span>
         </div>
         <div class="header__colum">
-
+          <span class="header__text"></span>
         </div>
       </div>
     </header>
@@ -76,8 +76,8 @@
       <a href="chats.html" class="tab-bar__tab">
         <i class="fa fa-comment"></i><span class="tab-bar__title">Chats</span>
       </a>
-      <a href="find.html" class="tab-bar__tab">
-        <i class="fa fa-search"></i><span class="tab-bar__title tab-bar__tab--selected">Find</span>
+      <a href="find.html" class="tab-bar__tab tab-bar__tab--selected">
+        <i class="fa fa-search"></i><span class="tab-bar__title">Find</span>
       </a>
       <a href="more.html" class="tab-bar__tab">
         <i class="fa fa-ellipsis-h"></i><span class="tab-bar__title">More</span>
