Almost done. I have only one left to finish chat.

--- a/chats.html
+++ b/chats.html
@@ -44,21 +44,119 @@
         <li class="chats__chat">
           <a href="chat.html">
             <div class="chat__content">
-              <img src="images/pro1.JPG" width="30px">
+              <img src="images/pro1.JPG">
               <div class="chat__preview">
                 <h3 class="chat__user">Geonil</h3>
                 <span class="chat__last-message">만나서 반가워 나는 장건일이라고해</span>
               </div>
             </div>
+            <span class="chat__date-time">
+              15:55
+            </span>
           </a>
-          <span class="chat__date-time">
-            15:55
-          </span>
         </li>
         <li class="chats__chat">
           <a href="chat.html">
             <div class="chat__content">
-              <img src="images/pro1.JPG" width="30px">
+              <img src="images/pro1.JPG">
+              <div class="chat__preview">
+                <h3 class="chat__user">Geonil</h3>
+                <span class="chat__last-message">만나서 반가워 나는 장건일이라고해</span>
+              </div>
+            </div>
+            <span class="chat__date-time">
+              15:55
+            </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/pro1.JPG">
+              <div class="chat__preview">
+                <h3 class="chat__user">Geonil</h3>
+                <span class="chat__last-message">만나서 반가워 나는 장건일이라고해</span>
+              </div>
+            </div>
+            <span class="chat__date-time">
+              15:55
+            </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/pro1.JPG">
+              <div class="chat__preview">
+                <h3 class="chat__user">Geonil</h3>
+                <span class="chat__last-message">만나서 반가워 나는 장건일이라고해</span>
+              </div>
+            </div>
+            <span class="chat__date-time">
+              15:55
+            </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/pro1.JPG">
+              <div class="chat__preview">
+                <h3 class="chat__user">Geonil</h3>
+                <span class="chat__last-message">만나서 반가워 나는 장건일이라고해</span>
+              </div>
+            </div>
+            <span class="chat__date-time">
+              15:55
+            </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/pro1.JPG">
+              <div class="chat__preview">
+                <h3 class="chat__user">Geonil</h3>
+                <span class="chat__last-message">만나서 반가워 나는 장건일이라고해</span>
+              </div>
+            </div>
+            <span class="chat__date-time">
+              15:55
+            </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/pro1.JPG">
+              <div class="chat__preview">
+                <h3 class="chat__user">Geonil</h3>
+                <span class="chat__last-message">만나서 반가워 나는 장건일이라고해</span>
+              </div>
+            </div>
+            <span class="chat__date-time">
+              15:55
+            </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/pro1.JPG">
+              <div class="chat__preview">
+                <h3 class="chat__user">Geonil</h3>
+                <span class="chat__last-message">만나서 반가워 나는 장건일이라고해</span>
+              </div>
+            </div>
+            <span class="chat__date-time">
+              15:55
+            </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/pro1.JPG">
               <div class="chat__preview">
                 <h3 class="chat__user">KaKaoTalk</h3>
                 <span class="chat__last-message">You logged in into KaKaoTalk PC</span>
