--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         </div>
       </div>
       <div class="header__bottom">
-        <div class="header__column">
+        <div class="header__colum">
           <span class="header__text">Manage</span>
         </div>
-        <div class="header__column">
+        <div class="header__colum">
           <span class="header__text">Friends <span class="header__number">1</span></span>
         </div>
-        <div class="header__column">
+        <div class="header__colum">
           <i class="fa fa-cog fa-lg"></i>
         </div>
       </div>
