--- a/chat.html
+++ b/chat.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Chat</title>
   </head>
-  <body>
-    <header class="top-header">
+  <body class="body-chat">
+    <header class="top-header chat-header">
       <div class="header__top">
         <div class="header__colum">
           <i class="fa fa-plane"></i>
@@ -25,7 +25,7 @@
       <div class="header__bottom">
         <div class="header__colum">
           <a href="chats.html">
-            <i class="fa fa-chevron-left fa-lg"></i>
+            <i class="fa fa-chevron-left fa"></i>
           </a>
         </div>
         <div class="header__colum">
@@ -39,16 +39,16 @@
     </header>
 
     <main class="chat">
-      <div class="data-divider">
-        <span class="data-divider__text">Wednesday, August 15 2018</span>
+      <div class="date-divider">
+        <span class="date-divider__text">Wednesday, August 15 2018</span>
       </div>
 
-      <div class="chat__message chat__message--from--me">
+      <div class="chat__message chat__message-from-me">
         <span class="chat__message-time">17:55</span>
         <span class="chat__message-body">Hello! this is a tess message</span>
       </div>
-      <div class="chat__message chat_message--to--me">
-        <img src="images/pro1.JPG" width="20px" alt="" class="chat__message-avatar">
+      <div class="chat__message chat__message-to-me">
+        <img src="images/pro1.JPG" alt="" class="chat__message-avatar">
         <div class="chat__message-center">
             <h3 class="chat__message-username">Lynn</h3>
             <span class="chat__message-body">And this is an answer</span>
@@ -58,14 +58,15 @@
     </main>
 
     <div class="type-message">
-      <i class="fa fa-plus fa-2x"></i>
+      <i class="fa fa-plus fa-lg"></i>
       <div class="type-message__input">
         <input type="text">
-        <i class="fa fa-smile-o"></i>
+        <i class="fa fa-smile-o fa-lg"></i>
         <span class="record-message">
-          <i class="fa fa-microphone"></i>
+          <i class="fa fa-microphone fa-lg"></i>
         </span>
       </div>
     </div>
+
   </body>
 </html>
