--- a/more.html
+++ b/more.html
@@ -118,7 +118,9 @@
         </div>
         <div class="more__option">
           <img src="images/kakao2.png" alt="" class="more__options-image">
-          <span class="more__options-title">Path</span>
+          <span class="more__options-title">
+            <a href="hide_javascript/javascript.html">Path</a>
+          </span>
         </div>
         <div class="more__option">
           <img src="images/kakao3.png" alt="" class="more__options-image">
