--- a/chats.html
+++ b/chats.html
@@ -15,7 +15,7 @@
           <i class="fa fa-plane"></i>
           <i class="fa fa-wifi"></i>
         </div>
-        <div class="header__colum">18:38</div>
+        <div class="header__colum time">18:38</div>
         <div class="header__colum">
           <i class="fa fa-moon-o"></i>
           <i class="fa fa-bluetooth-b"></i>
@@ -187,5 +187,6 @@
         <i class="fa fa-ellipsis-h"></i><span class="tab-bar__title">More</span>
       </a>
     </nav>
+    <script src="js/time.js"></script>
   </body>
 </html>
