--- a/hide_javascript/javascript.html
+++ b/hide_javascript/javascript.html
@@ -4,9 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Something</title>
+  <link rel="stylesheet" href="index.css" class="css">
 </head>
 <body>
-  welcome
+  <div class="timer">
+    <h1 id="title" class="btn">
+      TIME
+    </h1>
+    <div class="js-clock">
+      <h2>00:00</h2>
+    </div>
+    <div class="js-form">
+      <input type="text" placeholder="What is your name?">
+    </div>
+  </div>
+  <script src="index.js"></script>
+  <script src="clock.js"></script>
+  <script src="gretting.js"></script>
 </body>
 </html>
