--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
           <i class="fa fa-plane"></i>
           <i class="fa fa-wifi"></i>
         </div>
-        <div class="header__colum">18:38</div>
+        <div class="header__colum time">18:38</div>
         <div class="header__colum">
           <i class="fa fa-moon-o"></i>
           <i class="fa fa-bluetooth-b"></i>
@@ -68,6 +68,6 @@
     </main>
 
 
-
+  <script src="js/time.js"></script>
   </body>
 </html>
