--- a/hide_javascript/javascript.html
+++ b/hide_javascript/javascript.html
@@ -9,18 +9,28 @@
 </head>
 <body>
   <div class="timer">
+    <h2 class="js-greetings greetings"></h2>
     <h1 id="title" class="btn">
       TIME
     </h1>
     <div class="js-clock">
       <h2>00:00</h2>
     </div>
-    <div class="js-form">
+    <form class="js-form form">
       <input type="text" placeholder="What is your name?">
+    </form>
+    <form action="" class="js-toDoForm">
+      <input type="text" placeholder="Write a to do">
+    </form>
+    <div class="todo-div">
+      <ol class="js-toDoList">
+      </ol>
     </div>
   </div>
+
   <script src="index.js"></script>
   <script src="clock.js"></script>
   <script src="gretting.js"></script>
+  <script src="todo.js"></script>
 </body>
 </html>
