--- a/hide_javascript/javascript.html
+++ b/hide_javascript/javascript.html
@@ -9,19 +9,21 @@
 </head>
 <body>
   <div class="timer">
-    <h2 class="js-greetings greetings"></h2>
-    <h1 id="title" class="btn">
-      TIME
-    </h1>
-    <div class="js-clock">
-      <h2>00:00</h2>
+    <div class=timer-body>
+      <h2 class="js-greetings greetings"></h2>
+      <h1 id="title" class="btn">
+        TIME
+      </h1>
+      <div class="js-clock">
+        <h2>00:00</h2>
+      </div>
+      <form class="js-form form">
+        <input type="text" placeholder="What is your name?">
+      </form>
+      <form action="" class="js-toDoForm">
+        <input type="text" placeholder="Write a to do">
+      </form>
     </div>
-    <form class="js-form form">
-      <input type="text" placeholder="What is your name?">
-    </form>
-    <form action="" class="js-toDoForm">
-      <input type="text" placeholder="Write a to do">
-    </form>
     <div class="todo-div">
       <ol class="js-toDoList">
       </ol>
