--- a/hide_javascript/javascript.html
+++ b/hide_javascript/javascript.html
@@ -7,9 +7,9 @@
   <title>Something</title>
   <link rel="stylesheet" href="index.css" class="css">
 </head>
-<body>
+<body class="bgImage">
   <div class="timer">
-    <div class=timer-body>
+    <div class="timer-body">
       <h2 class="js-greetings greetings"></h2>
       <h1 id="title" class="btn">
         TIME
@@ -35,5 +35,6 @@
   <script src="clock.js"></script>
   <script src="gretting.js"></script>
   <script src="todo.js"></script>
+  <script src="bg.js"></script>
 </body>
 </html>
