--- a/hide_javascript/javascript.html
+++ b/hide_javascript/javascript.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Something</title>
+  <title>ToDoMemo</title>
   <link rel="stylesheet" href="index.css" class="css">
 </head>
 <body class="bgImage">
@@ -12,7 +12,7 @@
     <div class="timer-body">
       <h2 class="js-greetings greetings"></h2>
       <h1 id="title" class="btn">
-        TIME
+        Do somthing yours
       </h1>
       <div class="js-clock">
         <h2>00:00</h2>
